--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -218,31 +218,31 @@ How about something else... = Як щодо іншого…
 A pleasure to meet you. = Приємно зустріти вас.
 Our relationship:  = Наші відносини
  # Requires translation!
-We have encountered the City-State of [name]! = 
+We have encountered the City-State of [name]! = Ми зіткнулися з Містом-державою [name]
  # Requires translation!
-Declare Friendship ([numberOfTurns] turns) = 
+Declare Friendship ([numberOfTurns] turns) = Заявити про дружбу ([numberOfTurns] ходів)
  # Requires translation!
-May our nations forever remain united! = 
+May our nations forever remain united! = Нехай наші народи назавжди залишаються об’єднаними!
  # Requires translation!
-Indeed! = 
+Indeed! = Справді!
  # Requires translation!
 Denounce ([numberOfTurns] turns) = 
  # Requires translation!
-We will remember this. = 
+We will remember this. = Ми пам’ятатимемо це.
  # Requires translation!
-Unforgivable = 
+Unforgivable = Непрощальне
  # Requires translation!
-Enemy = 
+Enemy = Ворог
  # Requires translation!
-Competitor = 
+Competitor = Конкурент
  # Requires translation!
-Neutral = 
+Neutral = Нейтральний
  # Requires translation!
-Favorable = 
+Favorable = Вигідний
  # Requires translation!
-Friend = 
+Friend = Дружній
  # Requires translation!
-Ally = 
+Ally = Союзницький
  # Requires translation!
 Provides [amountOfCulture] culture at [30] Influence = 
  # Requires translation!
@@ -260,7 +260,7 @@ You declared war on us! =
  # Requires translation!
 Your warmongering ways are unacceptable to us. = 
  # Requires translation!
-You have captured our cities! = 
+You have captured our cities! = Ви захопили всі наші міста!
  # Requires translation!
 We applaud your liberation of our conquered cities! = 
  # Requires translation!
@@ -360,7 +360,7 @@ Gold per turn =
  # Requires translation!
 Cities = 
  # Requires translation!
-Technologies = 
+Technologies = Технології
  # Requires translation!
 Declarations of war = 
  # Requires translation!
@@ -369,163 +369,163 @@ Introduction to [nation] =
 Declare war on [nation] = 
 Luxury resources = Ресурси розкоші
  # Requires translation!
-Strategic resources = 
+Strategic resources = Стратегічні ресурси
  # Requires translation!
-replaces = 
+replaces = замінює
  # Requires translation!
-[resourceName] not required = 
+[resourceName] not required = [resourceName] не потрібен
  # Requires translation!
 Lost ability = 
  # Requires translation!
-National ability = 
+National ability = Національна здібність
 
-# Nations
+# Nations / Нації
 
  # Requires translation!
-Babylon = 
+Babylon = Вавилон
  # Requires translation!
-Receive free Great Scientist when you discover Writing, Earn Great Scientists 50% faster = 
+Receive free Great Scientist when you discover Writing, Earn Great Scientists 50% faster = Отримайте безкоштовно Великого вченого при вивченні Писемності. Отримуйте Великих учених на 50% швидше.
  # Requires translation!
-Nebuchadnezzar II = 
+Nebuchadnezzar II = Навуходоносор II
  # Requires translation!
-Greece = 
+Greece = Греція
  # Requires translation!
-Alexander = 
+Alexander = Олександр
  # Requires translation!
-City-State Influence degrades at half and recovers at twice the normal rate = 
+City-State Influence degrades at half and recovers at twice the normal rate = Вплив міста-держави зменшується наполовину і відновлюється вдвічі більше.
  # Requires translation!
-China = 
+China = Китай
  # Requires translation!
-Wu Zetian = 
+Wu Zetian = У Цзетянь
  # Requires translation!
-Great general provides double combat bonus, and spawns 50% faster = 
+Great general provides double combat bonus, and spawns 50% faster = Великий генерал забезпечує подвійний бойовий бонус і з’являється на 50% швидше
  # Requires translation!
-Egypt = 
+Egypt = Єгипет
  # Requires translation!
-Ramesses II = 
+Ramesses II = Рамсес II
  # Requires translation!
-+20% production towards Wonder construction = 
++20% production towards Wonder construction = +20% виробництва при будівництві Дива
  # Requires translation!
-England = 
+England = Англія
  # Requires translation!
-Elizabeth = 
+Elizabeth = Єлизавета
  # Requires translation!
-+2 movement for all naval units = 
++2 movement for all naval units = +2 клітинки до руху для всіх військово-морських підрозділів
  # Requires translation!
-France = 
+France = Франція
  # Requires translation!
-Napoleon = 
+Napoleon = Наполеон
  # Requires translation!
-+2 Culture per turn from cities before discovering Steam Power = 
++2 Culture per turn from cities before discovering Steam Power = +2 Культури за хід до вивчення Steam Power
  # Requires translation!
-Russia = 
+Russia = Росія
  # Requires translation!
-Catherine = 
+Catherine = Катерина 
  # Requires translation!
-Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity = 
+Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity = Стратегічні ресурси забезпечують +1 Виробництво, а Коням, Залізу та Урану забезпечується подвійна кількість.
  # Requires translation!
-Rome = 
+Rome = Рим
  # Requires translation!
-Augustus Caesar = 
+Augustus Caesar = Октавіан Август
  # Requires translation!
-+25% Production towards any buildings that already exist in the Capital = 
++25% Production towards any buildings that already exist in the Capital = + 25% Виробництва для будь-яких будівель, які вже існують у столиці
  # Requires translation!
-Arabia = 
+Arabia = Арабія
  # Requires translation!
-Harun al-Rashid = 
+Harun al-Rashid = Гарун ар-Рашид
  # Requires translation!
-+1 Gold from each Trade Route, Oil resources provide double quantity = 
++1 Gold from each Trade Route, Oil resources provide double quantity = +1 Золото з кожного торгового шляху. Нафта видобувається вдвічі швидше.
  # Requires translation!
-America = 
+America = Америка
  # Requires translation!
-George Washington = 
+George Washington = Джордж Вашингтон
  # Requires translation!
-All land military units have +1 sight, 50% discount when purchasing tiles = 
+All land military units have +1 sight, 50% discount when purchasing tiles = Усі сухопутні підрозділи мають +1 Видимості. Знижку 50% при купівлі клітини.
  # Requires translation!
-Japan = 
+Japan = Японія
  # Requires translation!
-Oda Nobunaga = 
+Oda Nobunaga = Ода Нобунаґа
  # Requires translation!
-Units fight as though they were at full strength even when damaged = 
+Units fight as though they were at full strength even when damaged = Підрозділи завжди воюють з повною силою, навіть якщо вони отримали пошкодження.
  # Requires translation!
-Germany = 
+Germany = Німеччина
  # Requires translation!
-Otto von Bismark = 
+Otto von Bismark = Отто фон Бісмарк
  # Requires translation!
-67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment, -25% land units maintenance. = 
+67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment, -25% land units maintenance. = Є 67% шансу заробити 25 Золота та завербувати варварський загін з завойованого табору, -25% обслуговування сухопутних підрозділів
  # Requires translation!
-India = 
+India = Індія
  # Requires translation!
-Gandhi = 
+Gandhi = Магатма Ґанді
  # Requires translation!
-Unhappiness from number of Cities doubled, Unhappiness from number of Citizens halved. = 
+Нещастя від кількості міст подвоїлося, Нещастя від кількості громадян вдвічі зменшилося. = 
  # Requires translation!
-The Ottomans = 
+The Ottomans = Османи
  # Requires translation!
-Suleiman I = 
+Suleiman I = Сулейман I Пишний
  # Requires translation!
-Pay only one third the usual cost for naval unit maintenance. Melee naval units have a 1/3 chance to capture defeated naval units. = 
+Pay only one third the usual cost for naval unit maintenance. Melee naval units have a 1/3 chance to capture defeated naval units. = Сплачуйте лише третину звичайних витрат на обслуговування військово-морських підрозділів. Морські підрозділи ближнього бою мають 33% шансу захопити переможені військово-морські частини.
  # Requires translation!
-Korea = 
+Korea = Корея
  # Requires translation!
-Sejong = 
+Sejong = Седжон Великий
  # Requires translation!
-+2 Science for all specialists and Great Person tile improvements = 
++2 Science for all specialists and Great Person tile improvements = +2 Науки для всіх спеціалістів і до клітини Великої людини
  # Requires translation!
-Iroquois = 
+Iroquois = Ірокези
  # Requires translation!
-Hiawatha = 
+Hiawatha = Гайавата
  # Requires translation!
-All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = 
+All units move through Forest and Jungle Tiles in friendly territory as if they have roads. These tiles can be used to establish City Connections upon researching the Wheel. = Усі підрозділи рухаються через клітини Лісу та Джунглів як на дружній територіх, якщо там побудовані дороги.
  # Requires translation!
-Persia = 
+Persia = Персія
  # Requires translation!
-Darius I = 
+Darius I = Дарій I
  # Requires translation!
-Golden Ages last 50% longer. During a Golden Age, units receive +1 Movement and +10% Strength = 
+Golden Ages last 50% longer. During a Golden Age, units receive +1 Movement and +10% Strength = Золотий вік триває на 50% довше. Упродовж Золотого віку, підрозділи отримують +1 Рух і +10% Сили
  # Requires translation!
-Polynesia = 
+Polynesia = Полінезія
  # Requires translation!
-Kamehameha I = 
+Kamehameha I = Камегамега I
  # Requires translation!
-Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. = 
+Can embark and move over Coasts and Oceans immediately. +1 Sight when embarked. +10% Combat Strength bonus if within 2 tiles of a Moai. =  Можна одразу сісти на пароплав і рухатися через Узбережжя і Океани. +1 кл. до Атаки. +10 Бойова сила якщо в межах 2 плиток Moaї
  # Requires translation!
-Siam = 
+Siam = Таїланд
  # Requires translation!
-Ramkhamhaeng = 
+Ramkhamhaeng = Рамакхамхаенг
  # Requires translation!
-Food and Culture from Friendly City-States are increased by 50% = 
+Food and Culture from Friendly City-States are increased by 50% = Їжа і Культура із сусідніх Міст-держав підвищена на 50%
  # Requires translation!
-Songhai = 
+Songhai = Сонгаї
  # Requires translation!
-Askia = 
+Askia = Аскія
  # Requires translation!
-Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = 
+Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Отримують утрічі більше золота з варварських таборів та розграблення міст. Підрозділи, які на воді, можуть захищатися. 
 
 # New game screen
 
  # Requires translation!
-Uniques = 
+Uniques = Унікальні
  # Requires translation!
-Promotions = 
+Promotions = Акції
  # Requires translation!
-Barbarians = 
+Barbarians = Варвари
 Load copied data = Завантажити копію даних
 Could not load game from clipboard! = Неможливо завантажити гру з буфера обміну
 Start game! = Почати!
-Map options = Налаштування мапи!
-Game options = Налаштування гри!
+Map options = Налаштування мапи
+Game options = Налаштування гри
 Map type = Тип мапи
  # Requires translation!
-Generated = 
+Generated = Створено
  # Requires translation!
-Existing = 
+Existing = Існуюче
 Map generation type = Тип генерації мап
 Number of city-states = Міст-держав
  # Requires translation!
-One City Challenge = 
+One City Challenge = Випробовування «Одне місто»
 No barbarians = Без варварів
-No ancient ruins = Жодної древньої руїни
+No ancient ruins = Немає древніх руїн
 Victory conditions = Умови перемоги
 Scientific = Наукова
 Domination = Загарбання
@@ -615,7 +615,7 @@ Show minimap = Показати мінімапу
 Show pixel units = Показати піксельні підрозділи
 Show pixel improvements = Показати піксельні вдосконалення
  # Requires translation!
-Enable nuclear weapons = 
+Enable nuclear weapons = Увімкнути ядерну зброю
 Fontset = Шрифт
 
 # Notifications
@@ -635,7 +635,7 @@ Work has started on [construction] = [construction]: почато будівни
 [cityName] cannot continue work on [construction] = [construction]: неможливо продовжити будувати в місті [cityName]
 [cityname] has expanded its borders! = Місто [cityname] розширило межі!
  # Requires translation!
-Your Golden Age has ended. = 
+Your Golden Age has ended. = Ваш Золотий вік закінчився.
 [cityName] has been razed to the ground! = Місто [cityName] зруйновано вщент!
 We have conquered the city of [cityname]! = Загарбано місто [cityname]!
 An enemy [unit] has attacked [cityname] = Ворожий підрозділ [unit] атакував наше місто [cityname]
@@ -847,7 +847,7 @@ Maintenance = Технічне обслуговування
 Transportation upkeep = Обслуговування транспорту
 Unit upkeep = Утримання
 Trades = Торги
-Units = Пыдроздыли
+Units = Підрозділи
 Name = Ім’я
 Closest city = Найближче місто
 Action = Дія
@@ -866,12 +866,12 @@ You have won a scientific victory! = Ви здобули научну перем
 You have won a cultural victory! = Ви здобули культурну перемогу!
 You have won a domination victory! = Ви знищили усіх!
  # Requires translation!
-You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart. = 
+You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart. = Ви домоглися перемоги завдяки приголомшливій силі вашої культури. Велич вашої цивілізації — пишність пам’ятників та сила її митців вразили світ! Поети будуть шанувати вас до тих пір, поки краса приносить радість стомленому серцю.
  # Requires translation!
-The world has been convulsed by war. Many great and powerful civilizations have fallen, but you have survived - and emerged victorious! The world will long remember your glorious triumph! = 
+The world has been convulsed by war. Many great and powerful civilizations have fallen, but you have survived - and emerged victorious! The world will long remember your glorious triumph! = Світ заплутаний війною. Занепало багато великих і могутніх цивілізацій, але ви вижили — і вийшли переможцями! Світ надовго запам’ятає твій славний тріумф!
  # Requires translation!
-You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = 
-You have been defeated. Your civilization has been overwhelmed by its many foes. But your people do not despair, for they know that one day you shall return - and lead them forward to victory! = Ви зазнали поразки. Вашу цивілізацію переповнили численні вороги. Але твій народ не впадає у відчай, бо вони знають, що одного дня ти повернешся — і поведеш їх до перемоги!
+You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = Ви здобули перемогу завдяки оволодінню Наукою! Ви перемогли таємниці природи і повели своїх людей у плавання до сміливого нового світу! Ваш тріумф запам’ятається до тих пір, поки на нічному небі горить зірки!
+You have been defeated. Your civilization has been overwhelmed by its many foes. But your people do not despair, for they know that one day you shall return - and lead them forward to victory! = Ви зазнали поразки. Вашу цивілізацію переповнили численні вороги. Але ваш народ не впадає у відчай, бо вони знають, що одного дня ва повернетеся — і поведете їх до перемоги!
 One more turn...! = Ще один хід...
 Built Apollo Program = Здійснити Програму Аполлон
 Destroy [civName] = Знищити [civName]
@@ -939,9 +939,9 @@ Requires = Потребує
 # Policies
 
  # Requires translation!
-Adopt policy = 
+Adopt policy = Прийняти політику
  # Requires translation!
-Adopt free policy = 
+Adopt free policy = Прийняти безкоштовку політику
 Unlocked at = Розблокується у
 Tradition = Традиція
 +3 culture in capital and increased rate of border expansion = +3 культури в столиці і підвищення швидкості розширення кордонів
@@ -953,7 +953,7 @@ Legalism =
  # Requires translation!
 Immediately creates a cheapest available cultural building in each of your first 4 cities for free = 
  # Requires translation!
-Oligarchy = 
+Oligarchy = Олігархія
  # Requires translation!
 Units in cities cost no Maintenance, garrisoned city +50% attacking strength = 
  # Requires translation!
@@ -1486,21 +1486,21 @@ Increases embarked movement +1 =
 # Tech eras
 
  # Requires translation!
-Ancient era = 
+Ancient era = Доісторичність
  # Requires translation!
-Classical era = 
+Classical era = Античність
  # Requires translation!
-Medieval era = 
+Medieval era = Середньовіччя
  # Requires translation!
-Renaissance era = 
+Renaissance era = Епоха Відродження
  # Requires translation!
-Industrial era = 
+Industrial era = Промислова ера
  # Requires translation!
-Modern era = 
+Modern era = Сучасність
  # Requires translation!
-Information era = 
+Information era = Інформаційна епоха
  # Requires translation!
-Future era = 
+Future era = Майбутне
 
 # Terrains
 
