--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -1148,6 +1148,28 @@ Ocean = Océan
 Flood plains = Plaines inondables
 Impassible = Impraticable
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+Krakatoa =
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = Bétail
@@ -1456,3 +1478,4 @@ Ambush I = Embuscade I
 Ambush II = Embuscade II
 Haka War Dance = Haka - Danse de guerre
 -10% combat strength for adjacent enemy units = -10% de force de combats pour toutes les unités ennemies adjacentes
+Rejuvenation =
