--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -1638,6 +1638,28 @@ Flood plains =
  # Requires translation!
 Impassible = 
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+Krakatoa =
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
  # Requires translation!
@@ -2001,3 +2023,4 @@ Ambush I = Zasadzka I (lotnictwo)
 Ambush II = Zasadzka II (lotnictwo)
 Haka War Dance = Haka - taniec wojenny
 -10% combat strength for adjacent enemy units = -10% walecznej siły dla jednostek przeciwnika leżących na przyległych polach
+Rejuvenation =
