--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -1154,6 +1154,28 @@ Ocean = Океан
 Flood plains = Пойма
 Impassible = Непроходимый
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+Krakatoa =
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = Скот
@@ -1470,3 +1492,4 @@ Ambush II = Засада II
 Haka War Dance = 
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
+Rejuvenation =
