--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -1105,6 +1105,28 @@ Ocean = 海洋
 Flood plains = 沖積平原
 Impassible = 不能通行
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+Krakatoa =
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = 牛群
@@ -1406,3 +1428,4 @@ Ambush I = 伏擊I級
 Ambush II = 伏擊II級
 Haka War Dance = 哈卡戰舞
 -10% combat strength for adjacent enemy units = 相鄰的敵方單位-10%戰鬥力
+Rejuvenation =
