--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -1096,6 +1096,19 @@ Ocean =
 Flood plains = 
 Impassible = 
 
+# Natural Wonders
+
+Barringer Crater = 
+Grand Mesa = 
+Great Barrier Reef = 
+Krakatoa =
+Mount Fuji = 
+Old Faithful = 
+Rock of Gibraltar = 
+Cerro de Potosi = 
+El Dorado = 
+Fountain of Youth = 
+
 # Resources
 
 Cattle = 
@@ -1396,3 +1409,4 @@ Ambush I =
 Ambush II = 
 Haka War Dance = 
 -10% combat strength for adjacent enemy units = 
+Rejuvenation =
