--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -1354,6 +1354,28 @@ Ocean = Oceano
 Flood plains = Planícies alagadas
 Impassible = Inacessível
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+Krakatoa =
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = Gado
@@ -1655,3 +1677,4 @@ Ambush I = Emboscada Aérea I
 Ambush II = Emboscada Aérea II
 Haka War Dance = Dança de Guerra Haka
 -10% combat strength for adjacent enemy units = -10% de força de combate para cada unidade inimiga adjacente
+Rejuvenation =
