--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -1108,6 +1108,28 @@ Ocean = 海洋
 Flood plains = 冲积平原
 Impassible = 不能通行
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+Krakatoa =
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = 牛群
@@ -1409,3 +1431,4 @@ Ambush I = 伏击I级
 Ambush II = 伏击II级
 Haka War Dance = 哈卡战舞
 -10% combat strength for adjacent enemy units = 相邻的敌方单位-10%战斗力
+Rejuvenation =
