--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -1098,25 +1098,16 @@ Impassible = Inaccessibile
 
 # Natural Wonders
 
- # Requires translation!
-Barringer Crater = 
- # Requires translation!
-Grand Mesa = 
- # Requires translation!
-Great Barrier Reef = 
-Krakatoa =
- # Requires translation!
-Mount Fuji = 
- # Requires translation!
-Old Faithful = 
- # Requires translation!
-Rock of Gibraltar = 
- # Requires translation!
-Cerro de Potosi = 
- # Requires translation!
-El Dorado = 
- # Requires translation!
-Fountain of Youth = 
+Barringer Crater = Cratere di Barringer
+Grand Mesa = Grand Mesa
+Great Barrier Reef = Grande barriera corallina
+Krakatoa = Krakatoa
+Mount Fuji = Monte Fuji
+Old Faithful = Old Faithful
+Rock of Gibraltar = Rocca di Gibilterra
+Cerro de Potosi = Cerro Rico
+El Dorado = El Dorado
+Fountain of Youth = Fonte della giovinezza
 
 # Resources
 
@@ -1418,4 +1409,4 @@ Ambush I = Imboscata aerea I
 Ambush II = Imboscata aerea II
 Haka War Dance = Danza di guerra Haka
 -10% combat strength for adjacent enemy units = -10% Forza alle unità nemiche adiacenti a questa unità
-Rejuvenation =
+Rejuvenation = Ringiovanimento
