Fix translation issue * missing space after = in template.properties breaks translations

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -1120,7 +1120,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -1437,4 +1438,5 @@ Ambush I = Přepadení I
 Ambush II = Přepadení II
 Haka War Dance = Haka - valečný tanec
 -10% combat strength for adjacent enemy units = -10% bojové síly pro nepřátelské jednotky na sousedních políčkách
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
