--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -2157,7 +2157,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -2756,4 +2757,5 @@ Ambush II =
 Haka War Dance = 
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
