--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -1156,7 +1156,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -1478,4 +1479,5 @@ Ambush I = Embuscade I
 Ambush II = Embuscade II
 Haka War Dance = Haka - Danse de guerre
 -10% combat strength for adjacent enemy units = -10% de force de combats pour toutes les unités ennemies adjacentes
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
