--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -1119,7 +1119,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -1433,4 +1434,5 @@ Ambush I = Lufthinterhalt I
 Ambush II = Lufthinterhalt II
 Haka War Dance = Haka Kriegstanz
 -10% combat strength for adjacent enemy units = -10% Kampfstärke für angrenzende feindliche Einheiten
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
