--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -1113,7 +1113,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -1427,4 +1428,5 @@ Ambush I = 공중 매복 I
 Ambush II = 공중 매복 II
 Haka War Dance = 하카 전쟁 의식
 -10% combat strength for adjacent enemy units = 이 유닛과 인접한 적 유닛의 전투력 -10%
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
