--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -1646,7 +1646,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -2023,4 +2024,5 @@ Ambush I = Zasadzka I (lotnictwo)
 Ambush II = Zasadzka II (lotnictwo)
 Haka War Dance = Haka - taniec wojenny
 -10% combat strength for adjacent enemy units = -10% walecznej siły dla jednostek przeciwnika leżących na przyległych polach
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
