--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -1362,7 +1362,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -1677,4 +1678,5 @@ Ambush I = Emboscada Aérea I
 Ambush II = Emboscada Aérea II
 Haka War Dance = Dança de Guerra Haka
 -10% combat strength for adjacent enemy units = -10% de força de combate para cada unidade inimiga adjacente
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
