--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -1116,7 +1116,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -1431,4 +1432,5 @@ Ambush I = 伏击I级
 Ambush II = 伏击II级
 Haka War Dance = 哈卡战舞
 -10% combat strength for adjacent enemy units = 相邻的敌方单位-10%战斗力
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
