--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -1113,7 +1113,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -1428,4 +1429,5 @@ Ambush I = 伏擊I級
 Ambush II = 伏擊II級
 Haka War Dance = 哈卡戰舞
 -10% combat strength for adjacent enemy units = 相鄰的敵方單位-10%戰鬥力
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
