--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -1431,7 +1431,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -1745,4 +1746,5 @@ Ambush I = Повітряна засідка I
 Ambush II = Повітряна засідка II
 Haka War Dance = Бойовий танець Гака
 -10% combat strength for adjacent enemy units = Сусідні ворожі підрозділи отримують силу атаки -10%
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
