--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -1964,7 +1964,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -2567,4 +2568,5 @@ Ambush II =
 Haka War Dance = 
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
