--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -1162,7 +1162,8 @@ Barringer Crater =
 Grand Mesa = 
  # Requires translation!
 Great Barrier Reef = 
-Krakatoa =
+ # Requires translation!
+Krakatoa = 
  # Requires translation!
 Mount Fuji = 
  # Requires translation!
@@ -1492,4 +1493,5 @@ Ambush II = Засада II
 Haka War Dance = 
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
-Rejuvenation =
+ # Requires translation!
+Rejuvenation = 
