Changed Great Scientist unique and action strings in all languages, and removed BasicHelp - all the important info should be in the tutorials anyway.

--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1168,7 +1168,7 @@ vs [unitType] =
  # Requires translation!
 Terrain = 
  # Requires translation!
-Discover Technology = 
+Hurry Research = 
  # Requires translation!
 Conduct Trade Mission = 
  # Requires translation!
@@ -2235,7 +2235,7 @@ Can build improvement: Landmark =
  # Requires translation!
 Great Scientist = 
  # Requires translation!
-Can discover a technology = 
+Can hurry technology research = 
  # Requires translation!
 Can build improvement: Academy = 
  # Requires translation!
