--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -680,7 +680,8 @@ Landing = 상륙
 Flanking = 측면 공격
 vs [unitType] = vs [unitType]
 Terrain = 지형
-Discover Technology = 무료 기술 발견
+ # Requires translation!
+Hurry Research = 
 Conduct Trade Mission = 무역 임무 수행
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = [civName]에의 무역 임무로부터 금 [goldAmount]와(과) 영향력 [influenceAmount]을(를) 얻었습니다!
 Hurry Wonder = 불가사의 건축 가속
@@ -1305,7 +1306,8 @@ Unbuildable = 도시에서 직접 생산 불가능
 Can start an 8-turn golden age = 8턴 동안 지속되는 황금기 시작 가능
 Can build improvement: Landmark = 타일 시설 '랜드마크' 건설 가능
 Great Scientist = 위대한 과학자
-Can discover a technology = 기술 하나를 무료로 발견 가능
+ # Requires translation!
+Can hurry technology research = 
 Can build improvement: Academy = 타일 시설 '아카데미' 건설 가능
 Great Merchant = 위대한 상인
 Can undertake a trade mission with City-State, giving a large sum of gold and [influenceAmount] Influence = 도시 국가에서 무역 임무를 통해 많은 양의 금과 영향력 [influenceAmount]을(를) 얻을 수 있음
