--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 342
-        versionName "3.3.9"
+        versionCode 343
+        versionName "3.3.9-patch1"
 
         archivesBaseName = "Unciv"
     }
