--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -1,3 +1,21 @@
+
+# Tutorial tasks
+
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
+Enter the city screen!\nClick the city button twice = 
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
+Meet another civilization!\nExplore the map until you encounter another civilization! = 
+Open the options table!\nClick the menu button (top left) > click 'Options' = 
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
+
 # Buildings
 
 Palace = 
