--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -1,22 +1,21 @@
 
 # Tutorial tasks
 
- # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
- # Requires translation!
-Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
- # Requires translation!
-Enter the city screen!\nClick the city button twice = 
- # Requires translation!
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
- # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 
- # Requires translation!
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
- # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
- # Requires translation!
-Meet another civilization!\nExplore the map until you encounter another civilization! = 
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Eine Einheit bewegen!\nKlicke auf eine Einheit > Klicke auf ein Ziel > Klicke auf das Pfeil-Popup.
+
+Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Eine Stadt gründen!\nWähle den Siedler (Flaggensymbol) > Klicke auf 'Stadt gründen' (unten links). 
+
+Enter the city screen!\nClick the city button twice = Öffne den Stadtbildschirm!\n Klicke zweimal den Stadt- Knopf.
+
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wähle eine Technologie zum Erforschen!\nKlicke auf den Tech-Button (grünlich, oben links) > \n wähle Technologie > klicke auf 'Forschung' (unten rechts). 
+
+Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Wähle eine Konstruktion!\nÖffne den Stadtbildschirm > Klicke auf eine Einheit oder ein Gebäude (linke Seite) 
+
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beende eine Runde!\ngehe durch die Einheiten mit 'Nächste Einheit' > Klicke auf 'Nächste Runde'.
+
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Weise bearbeitete Kacheln neu zu!\nÖffne den Stadtbildschirm > klicke auf die zugewiesene (grüne) Kachel, um sie zu entfernen > \n klicken Sie auf eine nicht zugewiesene Kachel, um die Bevölkerungszahl zuzuweisen.
+
+Meet another civilization!\nExplore the map until you encounter another civilization! = Triff eine andere Zivilisation!\n Erkunde die Karte, bis du einer anderen Zivilisation begegnest! 
  # Requires translation!
 Open the options table!\nClick the menu button (top left) > click 'Options' = 
  # Requires translation!
